[tool.poetry]
name = "altair-lab-jacobtrout"
version = "0.1.0"
description = ""
authors = ["jacobtrout <troutjacobm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
altair = "^5.4.1"
polars = "^1.9.0"
pandas = "^2.2.3"
pip = "^24.2"
vegafusion = {extras = ["embed"], version = "^1.6.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
